bat.bool1.parottrouble.ParotTrouble.scala.error
Erreur de compilation :
ParotTrouble:3: error: not found: value h
    if(h<=7 | h>= 20) {
       ^ParotTrouble:3: error: not found: value h
    if(h<=7 | h>= 20) {
              ^ParotTrouble:3: error: type mismatch;
 found   : Unit
 required: Boolean
    if(h<=7 | h>= 20) {
    ^