bat.bool1.parottrouble.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
  if(talking==true) {
    if(h<=7 | h>= 20) {
      return true
    }
  }
  else {
    return false
  }
}